Fix footer button rounded edge on mobile iOS

--- a/themes/custom/expo2020/assets/src/scss/app/layout/footer.scss
+++ b/themes/custom/expo2020/assets/src/scss/app/layout/footer.scss
@@ -86,6 +86,7 @@
             .form-trigger.submit {
                 background-color: $primary-turquoise;
                 border: none;
+                -webkit-appearance: none;
                 -webkit-border-radius: 0;
                 -moz-border-radius: 0;
                 border-radius: 0;
